KUSTOMIZE/fastapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: kustomize
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - secretName: rancher-secret
      hosts:
        - fastapi.datascientest-course.cloudns.ch
  rules:
  - host: fastapi.datascientest-course.cloudns.ch
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
             service:
              name: fastapi-deployment
              port:
                number: 80
